# garmin-dashboard

./: .env  .env.example  README.md  pyproject.toml
data/: activities.csv
garmin_dashboard/: __init__.py  analytics.py  data_store.py  fit_parser.py  garmin_client.py  main.py  web_app.py
garmin_dashboard.egg-info/: SOURCES.txt  requires.txt
